--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,26 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+/* Change the background color and text color of autofilled inputs */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  -webkit-text-fill-color: #F2ECEC;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+/* Change the background color and text color of autofilled textareas */
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  -webkit-text-fill-color: #F2ECEC;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
   -ms-overflow-style: none; /* IE and Edge */
